--- a/spring-react/src/main/resources/application.properties
+++ b/spring-react/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port = 8089
 spring.datasource.url = jdbc:mysql://localhost:3306/spring_react
 spring.datasource.username = root
 spring.datasource.password = password
+
+spring.jpa.hibernate.ddl-auto = update
